test/functions/resolution/errors/testBadCallCandidates.5.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:62: error: unresolved call 'owned D.bar("hi")'
testBadCallCandidates.chpl:7: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:62: note: because method call receiver with type owned D
testBadCallCandidates.chpl:3: note: is passed to formal 'this: borrowed C'
testBadCallCandidates.chpl:20: note: candidates are: D.type bar(x: int)
testBadCallCandidates.chpl:39: note:                 bar(x: D)
